2006-05-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (format_CFLAGS): Remove variable.
	(format.lo): Remove variable.
	(FORMAT_SOURCE) [MINGW]: Use ../mingw/c++format.cc instead of format.c.

2006-05-09  Bruno Haible  <bruno@clisp.org>

	* plural-eval.h (USE_SIGINFO): Don't define on Cygwin.

2006-05-02  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* write-mo.h: Remove DLL_VARIABLE declarations, not needed since
	write-mo.c is not compiled into a shared library.
	* lang-table.h: Likewise.

2006-05-02  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	* filters.h: Add C++ guards.

2006-05-07  Bruno Haible  <bruno@clisp.org>

	* x-perl.c (extract_variable): Fix syntax error introduced on
	2005-10-03.

2006-05-07  Bruno Haible  <bruno@clisp.org>

	* format-awk.c: Include xvasprintf.h instead of xerror.h.
	* format-elisp.c: Likewise.
	* format-librep.c: Likewise.
	* format-pascal.c: Likewise.
	* format-php.c: Likewise.
	* format-tcl.c: Likewise.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* write-java.c (msgdomain_write_java): Specify source-version 1.3 and
	require target-version 1.1.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* msginit.c (main): Simplify by use of xasprintf().
	* write-java.c: Include xvasprintf.h.
	(msgdomain_write_java): Simplify by use of xasprintf().
	* x-c.c: Include xvasprintf.h.
	(phase8a_get): Simplify by use of xasprintf().
	* xgettext.c: Don't include stpcpy.h.
	(remember_a_message, remember_a_message_plural): Simplify by use of
	xasprintf().

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c: Include xvasprintf.h.
	* msginit.c: Likewise.
	* msgl-cat.c: Likewise.
	* msgl-charset.c: Likewise.
	* po-xerror.c: Likewise.
	* x-csharp.c: Likewise.
	* x-glade.c: Likewise.
	* x-python.c: Likewise.
	* xgettext.c: Likewise.
	* format-boost.c: Include xvasprintf.h instead of xerror.h.
	* format-c.c: Likewise.
	* format-csharp.c: Likewise.
	* format-gcc-internal.c: Likewise.
	* format-java.c: Likewise.
	* format-lisp.c: Likewise.